[package]
name = "pseudosync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
liberty-parse = { path = "liberty-parse" }
simple-error = "0.2"
ndarray = "0.15.4"
regex = "1"
itertools = "0.10.3"
indexmap = "1.9.2"
lazy_static = "1.4.0"
gpoint = "0.2.1"
prettytable-rs = "0.10.0"
boolean_expression = "0.4"

[dev-dependencies]
tempfile = "3.8"
